# amarillo-gtfs-generator

./: pyproject.toml  requirements.txt
amarillo_gtfs_generator/: gtfs_export.py  gtfs_generator.py
amarillo_gtfs_generator/services/: carpools.py  config.py  trips.py
